# ddai

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  lib.rs  main.rs
src/commands/: business.rs  mod.rs  project.rs
src/commands/adapters/: mod.rs  path_buf_wrapper.rs
src/commands/adapters/business/: processor.rs
src/commands/adapters/registry/: processor.rs
src/core/: mod.rs  types.rs
src/core/business/: app.rs  manager.rs  mod.rs  types.rs
src/core/document/: types.rs
src/core/project/: app.rs  types.rs
src/core/registry/: manager.rs  types.rs
